hphp/hack/test/enum_class/typing/typing.extends3.bad.php.exp
File "typing.extends3.bad.php", line 23, characters 7-7:
Classes can only extend other classes. (Typing[4115])
  File "typing.extends3.bad.php", line 23, characters 17-17:
  This is an enum class.
